--- a/prova.ini
+++ b/prova.ini
@@ -8,4 +8,5 @@ ForwardX11 = yes
 prova = napoli in:name
 
 [DB]
-prova = INSERT INTO project VALUES (?,?)
+insert_repo = INSERT INTO project VALUES (?,?)
+create_repo = CREATE TABLE IF NOT EXISTS project(id INTEGER PRIMARY KEY AUTOINCREMENT,name text NOT NULL );
