--- a/prova.ini
+++ b/prova.ini
@@ -8,5 +8,8 @@ ForwardX11 = yes
 prova = napoli in:name
 
 [DB]
-insert_repo = INSERT INTO project VALUES (?,?)
-create_repo = CREATE TABLE IF NOT EXISTS project(id INTEGER PRIMARY KEY AUTOINCREMENT,name text NOT NULL );
+insert_repo = INSERT INTO repos VALUES (?,?)
+create_repo = CREATE TABLE IF NOT EXISTS repos(id INTEGER PRIMARY KEY AUTOINCREMENT,name text NOT NULL );
+select_repo = SELECT * FROM repos
+select_repo_id = SELECT * FROM repos WHERE id IN (?)
+count_repo =  SELECT COUNT(*) FROM repos
