problema cloc da risolvere

--- a/Util/prova.ini
+++ b/Util/prova.ini
@@ -9,10 +9,11 @@ prova = napoli in:name
 
 [DB]
 insert_repo = INSERT INTO repos VALUES (?,?)
-create_repo = CREATE TABLE IF NOT EXISTS repos(id INTEGER PRIMARY KEY,name text NOT NULL );
+create_repo = CREATE TABLE IF NOT EXISTS repos(id INTEGER PRIMARY KEY,name text NOT NULL);
 select_repo = SELECT * FROM repos
 select_repo_id = SELECT * FROM repos WHERE id IN (?)
 count_repo = SELECT COUNT(*) FROM repos
 create_links = CREATE TABLE IF NOT EXISTS links(id INTEGER PRIMARY KEY AUTOINCREMENT, url txt NOT NULL, id_repo INTEGER)
 insert_link = INSERT INTO links VALUES (?,?,?)
-select_link = SELECT url FROM link WHERE id_repo = ?
+select_link_id = SELECT * FROM links WHERE id_repo = ?
+select_link = SELECT * FROM links
