cloc funziona, refactoring completo

--- a/Util/prova.ini
+++ b/Util/prova.ini
@@ -15,5 +15,5 @@ select_repo_id = SELECT * FROM repos WHERE id IN (?)
 count_repo = SELECT COUNT(*) FROM repos
 create_links = CREATE TABLE IF NOT EXISTS links(id INTEGER PRIMARY KEY AUTOINCREMENT, url txt NOT NULL, id_repo INTEGER)
 insert_link = INSERT INTO links VALUES (?,?,?)
-select_link_id = SELECT * FROM links WHERE id_repo = ?
+select_link_id = SELECT url FROM links WHERE id_repo = ?
 select_link = SELECT * FROM links
