Aggiornamento DAOS e Broker

--- a/Util/prova.ini
+++ b/Util/prova.ini
@@ -8,8 +8,8 @@ ForwardX11 = yes
 prova = napoli in:name
 
 [DB]
-insert_repo = INSERT INTO repos VALUES (?,?)
-create_repo = CREATE TABLE IF NOT EXISTS repos(id INTEGER PRIMARY KEY,name text NOT NULL);
+insert_repo = INSERT INTO repos VALUES (?,?,?,?)
+create_repo = CREATE TABLE IF NOT EXISTS repos(id INTEGER PRIMARY KEY,name text NOT NULL, stars INT, forks INT);
 select_repo = SELECT * FROM repos
 select_repo_id = SELECT * FROM repos WHERE id IN (?)
 count_repo = SELECT COUNT(*) FROM repos
