aggiunti stars e fork al db, aggiunta suffix ai link_db, correzione bug

--- a/Util/prova.ini
+++ b/Util/prova.ini
@@ -13,7 +13,7 @@ create_repo = CREATE TABLE IF NOT EXISTS repos(id INTEGER PRIMARY KEY,name text 
 select_repo = SELECT * FROM repos
 select_repo_id = SELECT * FROM repos WHERE id IN (?)
 count_repo = SELECT COUNT(*) FROM repos
-create_links = CREATE TABLE IF NOT EXISTS links(id INTEGER PRIMARY KEY AUTOINCREMENT, url txt, id_repo INTEGER NOT NULL)
-insert_link = INSERT INTO links VALUES (?,?,?)
-select_link_id = SELECT url FROM links WHERE id_repo = ?
+create_links = CREATE TABLE IF NOT EXISTS links(id INTEGER PRIMARY KEY AUTOINCREMENT, url txt, id_repo INTEGER NOT NULL, suffix txt)
+insert_link = INSERT INTO links VALUES (?,?,?,?)
+select_link_id = SELECT * FROM links WHERE id_repo = ?
 select_link = SELECT * FROM links
