--- a/Util/prova.ini
+++ b/Util/prova.ini
@@ -1,12 +1,3 @@
-[DEFAULT]
-ServerAliveInterval = 45
-Compression = prova prova prova
-CompressionLevel = 9
-ForwardX11 = yes
-
-[GIT]
-prova = napoli in:name
-
 [DB]
 insert_repo = INSERT INTO repos VALUES (?,?,?,?)
 create_repo = CREATE TABLE IF NOT EXISTS repos(id INTEGER PRIMARY KEY,name text NOT NULL, stars INT, forks INT);
@@ -17,3 +8,5 @@ create_links = CREATE TABLE IF NOT EXISTS links(id INTEGER PRIMARY KEY AUTOINCRE
 insert_link = INSERT INTO links VALUES (?,?,?,?)
 select_link_id = SELECT * FROM links WHERE id_repo = ?
 select_link = SELECT * FROM links
+create_stats = CREATE TABLE IF NOT EXISTS stats(id INTEGER PRIMARY KEY, loc int, lod int, total_lines int);
+insert_stats = INSERT INTO stats VALUES(?,?,?,?)
