Aggiunta funzionalità salva grafici

--- a/Util/prova.ini
+++ b/Util/prova.ini
@@ -10,3 +10,4 @@ select_link_id = SELECT * FROM links WHERE id_repo = ?
 select_link = SELECT * FROM links
 create_stats = CREATE TABLE IF NOT EXISTS stats(id INTEGER PRIMARY KEY, loc int, lod int, total_lines int);
 insert_stats = INSERT INTO stats VALUES(?,?,?,?)
+select_stats = SELECT * FROM stats WHERE id = ?
