--- a/Util/specs.ini
+++ b/Util/specs.ini
@@ -1,3 +1,8 @@
+[GUI]
+DEFAULT_DB_FILE = Util/db_default.db
+SIZE_SEARCH = 3
+FIG_PATH = Util/
+
 [DB]
 insert_repo = INSERT INTO repos VALUES (?,?,?,?)
 create_repo = CREATE TABLE IF NOT EXISTS repos(id INTEGER PRIMARY KEY,name text NOT NULL, stars INT, forks INT);
@@ -8,6 +13,6 @@ create_links = CREATE TABLE IF NOT EXISTS links(id INTEGER PRIMARY KEY AUTOINCRE
 insert_link = INSERT INTO links VALUES (?,?,?,?)
 select_link_id = SELECT * FROM links WHERE id_repo = ?
 select_link = SELECT * FROM links
-create_stats = CREATE TABLE IF NOT EXISTS stats(id INTEGER PRIMARY KEY, loc int, lod int, total_lines int);
+create_stats = CREATE TABLE IF NOT EXISTS stats(id INTEGER PRIMARY KEY AUTOINCREMENT, repo_id INTEGER, tag txt, data txt);
 insert_stats = INSERT INTO stats VALUES(?,?,?,?)
-select_stats = SELECT * FROM stats WHERE id = ?
+select_stats = SELECT data FROM stats WHERE tag = ?
