--- a/Util/specs.ini
+++ b/Util/specs.ini
@@ -13,6 +13,7 @@ create_links = CREATE TABLE IF NOT EXISTS links(id INTEGER PRIMARY KEY AUTOINCRE
 insert_link = INSERT INTO links VALUES (?,?,?,?)
 select_link_id = SELECT * FROM links WHERE id_repo = ?
 select_link = SELECT * FROM links
-create_stats = CREATE TABLE IF NOT EXISTS stats(id INTEGER PRIMARY KEY AUTOINCREMENT, repo_id INTEGER, tag txt, data txt);
-insert_stats = INSERT INTO stats VALUES(?,?,?,?)
+create_stats = CREATE TABLE IF NOT EXISTS stats(id INTEGER PRIMARY KEY, repo_id INTEGER, tag varchar(20), data varchar(20));
+insert_stats = INSERT INTO stats(repo_id, tag, data) VALUES(?,?,?)
 select_stats = SELECT data FROM stats WHERE tag = ?
+prova_stats = SELECT * FROM stats
